--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -24,3 +24,24 @@
 #rating-div .slider-selection {
   background: green;
 }
+
+#course-card {
+  max-height: 300px;
+  min-height: 300px;
+  min-width: 500px;
+  position: relative;
+}
+
+#card-bottom-icons {
+  position: absolute;
+  bottom: 0;
+  right: 10%;
+}
+
+#side-bar {
+  min-width: 250px;
+}
+
+#course-card-img {
+  min-width: 250px;
+}
