--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,7 +15,7 @@
 <hr>
 <div class="row">
   <div class="col-md-3">
-    <div class="card">
+    <div class="card" id="side-bar">
       <div class="card-body">
         <h5 class="text-center">Sorting</h5>
           <%= render'courses/sort_menu' %>
