Completely rewrote search index.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,8 @@
 @import "user_dashboard";
 @import "select2";
 @import "select2-bootstrap";
+@import "bootstrap-multiselect.css";
+@import "search";
 
 .ui-menu {
   border: 1px solid black;
