--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+button.multiselect {
+  background-color: #007bff;
+  color: #ffffff;
+}
+.multiselect-container {
+  min-width: 250px;
+}
