--- a/app/views/application/_general-header.html.erb
+++ b/app/views/application/_general-header.html.erb
@@ -26,9 +26,11 @@
     </li>
   </ul>
 </div>
-<form class="form-inline md-form form-sm active-purple-2 mt-2">
-  <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
-  <i class="fas fa-search" aria-hidden="true"></i>
+<form class="form-inline my-2 my-lg-0 input-group mr-3" style="max-width: 400px">
+  <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+  <div class="input-group-append">
+    <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
+  </div>
 </form>
 <%= link_to 'Sign in', new_user_session_path, class: 'btn btn-outline-secondary' %>
 </nav>
