--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "select2-bootstrap";
 @import "bootstrap-multiselect.css";
 @import "search";
+@import "typeahead";
 
 .ui-menu {
   border: 1px solid black;
