--- a/app/views/participations/index.html.erb
+++ b/app/views/participations/index.html.erb
@@ -9,9 +9,11 @@
           <div class="container-fluid">
             <div id="participations-list">
               <h1>You are currently a member of this courses: </h1>
-              <%= form_tag '/search', remote: true, method: :post do %>
+              <%= form_tag '/user_dashboard_search', remote: true, method: :post do %>
                 <div class="input-group form-action mb-3">
                   <%= hidden_field_tag 'search[user_id]', current_user.id %>
+                  <%= hidden_field_tag 'search[entity][]', 'course' %>
+                  <%= hidden_field_tag 'search[filters][members]', current_user.id %>
                   <%= text_field_tag 'search[query]', nil, placeholder: 'Enter your search query here', class: 'form-control' %>
                   <div class="input-group-append">
                     <%= button_tag(type: :submit, class: 'btn btn-outline-secondary') do %>
@@ -20,20 +22,22 @@
                   </div>
                 </div>
               <% end %>
-              <% if @participations.empty? %>
-                <h4>Sorry, no courses found.</h4>
-              <% else %>
-                <% @participations.each do |participation| %>
-                  <div id="div-participation-<%= participation.id %>">
-                    <hr/>
-                    <%= participation.course.name %>
-                    <div class="participation-actions">
-                      <%= link_to 'Leave course', participation_path(participation), method: :delete, remote: :true, class: 'btn btn-md btn-danger' %>
+              <div id="found-results">
+                <% if @participations.empty? %>
+                  <h4>Sorry, no courses found.</h4>
+                <% else %>
+                  <% @participations.each do |participation| %>
+                    <div id="div-participation-<%= participation.id %>">
+                      <hr/>
+                      <%= participation.course.name %>
+                      <div class="participation-actions">
+                        <%= link_to 'Leave course', participation_path(participation), method: :delete, remote: :true, class: 'btn btn-md btn-danger' %>
+                      </div>
+                      <hr/>
                     </div>
-                    <hr/>
-                  </div>
+                  <% end %>
                 <% end %>
-              <% end %>
+              </div>
             </div>
           </div>
         </div>
