Fixed bugs with search stability when not signed in user present.

--- a/app/views/application/_general-header.html.erb
+++ b/app/views/application/_general-header.html.erb
@@ -27,7 +27,7 @@
   </ul>
 </div>
 <form class="form-inline input-group" style="max-width: 300px">
-  <input class="form-control navbar-input typeahead" type="search" placeholder="Search" aria-label="Search" data-user="<%= current_user.id %>">
+  <input class="form-control navbar-input typeahead" type="search" placeholder="Search" aria-label="Search" data-user="">
   <div class="input-group-append">
     <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
   </div>
