--- a/app/assets/stylesheets/typeahead.scss
+++ b/app/assets/stylesheets/typeahead.scss
@@ -7,7 +7,8 @@ span.twitter-typeahead .tt-dropdown-menu {
   z-index: 1000;
   display: none;
   float: left;
-  max-width: 300px;
+  min-width: 200px;
+  max-width: 400px;
   padding: 5px 0;
   margin: 2px 0 0;
   list-style: none;
