Changed courses sorting.

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -33,7 +33,7 @@
 <div class="row my-5">
   <div class="col-md-5"></div>
   <div class="col-md-6">
-    <%= will_paginate @courses, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+    <%== pagy_bootstrap_nav(@pagy) %>
   </div>
 </div>
 </div>
