--- a/app/views/organizations/_sort_list.html.erb
+++ b/app/views/organizations/_sort_list.html.erb
@@ -4,13 +4,29 @@
     <%= simple_form_for :sort, remote: true, url: organizations_sortable_path, method: :get do |f| %>
       <div class="form-row">
         <div class="col-md-8">
-          <%= f.input :sort_by, label: 'Sort by', collection: @sort_by, include_blank: false, required: false %>
+          <%= f.input :sort_by, label: 'Sort by', collection: @sort_by, include_blank: false,
+              required: false, input_html: { id: 'sort_by_org' } %>
         </div>
         <div class="col-md-4">
           <%= f.input :direction, label: nil, collection: {'￪': 'asc', '￬': 'desc'},
-              include_blank: false, required: false %>
+              include_blank: false, required: false, input_html: { id: 'sort_direction_org' } %>
         </div>
       </div>
     <% end %>
   </div>
 </div>
+
+<script>
+$('#sort_direction_org').on('change', function() {
+  $.ajax({
+    url: '/organization/sortable',
+    type: 'GET',
+    data: {
+      sort: {
+        sort_by: $('#sort_by_org').val(),
+        direction: this.value
+      }
+    }
+  });
+});
+</script>
