--- a/app/views/user_dashboard/index.html.erb
+++ b/app/views/user_dashboard/index.html.erb
@@ -6,20 +6,35 @@
     <div class="col-lg-10">
       <div class="tab-content" id="v-pills-tabContent">
         <div class="tab-pane fade show active" id="v-pills-dashboard" role="tabpanel" aria-labelledby="v-pills-dashboard-tab">
-          Dashboard
           <div class="container-fluid">
+            <h2>Dashboard</h2>
             <div class="row">
               <div class="col-lg-4 col-md-4 col-sm-12">
                 Current courses:
-                <div class="panel-stub"></div>
+                <div class="panel-stub">
+                  <% @enrolled_courses.each do |course| %>
+                    <%= render partial: 'user_dashboard/info_item', locals: { course: course } %>
+                  <% end %>
+                </div>
+                <%= link_to 'More', '#', class: 'btn btn-sm btn-secondary' %>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
                 Organizations courses:
-                <div class="panel-stub"></div>
+                <div class="panel-stub">
+                  <% @organization_courses.each do |course| %>
+                    <%= render partial: 'user_dashboard/info_item', locals: { course: course } %>
+                  <% end %>
+                </div>
+                <%= link_to 'More', '#', class: 'btn btn-sm btn-secondary' %>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
                 User-created courses:
-                <div class="panel-stub"></div>
+                <div class="panel-stub">
+                  <% @user_courses.each do |course| %>
+                    <%= render partial: 'user_dashboard/info_item', locals: { course: course } %>
+                  <% end %>
+                </div>
+                <%= link_to 'More', '#', class: 'btn btn-sm btn-secondary' %>
               </div>
             </div>
             <div class="row">
@@ -27,17 +42,28 @@
                 Favourite courses:
                 <div class="panel-stub">
                   <% @favorite_courses.each do |course| %>
-                    <%= render partial: 'courses/card', locals: { course: course } %>
+                    <%= render partial: 'user_dashboard/info_item', locals: { course: course } %>
                   <% end %>
                 </div>
+                <%= link_to 'More', '#', class: 'btn btn-sm btn-secondary' %>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
                 Last completed courses:
-                <div class="panel-stub"></div>
+                <div class="panel-stub">
+                  <% @favorite_courses.each do |course| %>
+                    <%= render partial: 'user_dashboard/info_item', locals: { course: course } %>
+                  <% end %>
+                </div>
+                <%= link_to 'More', '#', class: 'btn btn-sm btn-secondary' %>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
                 Recommended courses:
-                <div class="panel-stub"></div>
+                <div class="panel-stub">
+                  <% @recommended_courses.each do |course| %>
+                    <%= render partial: 'user_dashboard/info_item', locals: { course: course } %>
+                  <% end %>
+                </div>
+                <%= link_to 'More', '#', class: 'btn btn-sm btn-secondary' %>
               </div>
             </div>
           </div>
