--- a/app/views/application/_user-header.html.erb
+++ b/app/views/application/_user-header.html.erb
@@ -30,5 +30,12 @@
   <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
   <i class="fas fa-search" aria-hidden="true"></i>
 </form>
-<%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger') %>
+<div class="navbar-nav">
+  <% if true_user != current_user %>
+    <%= link_to "#{true_user.profile.nickname.capitalize} unimpersonate #{current_user.profile.nickname.capitalize}",
+      stop_impersonating_path(current_user), method: :post, style: 'margin-right: 5px;', class: 'btn btn-outline-success' %>
+  <% end %>
+  <%= link_to "#{current_user.profile.nickname.capitalize}", user_dashboard_path(current_user), style: 'margin-right: 5px;', class: 'btn btn-outline-success' %>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger') %>
+</div>
 </nav>
