--- a/app/views/memberships/_card.html.erb
+++ b/app/views/memberships/_card.html.erb
@@ -14,7 +14,7 @@
       <% end %>
     </div>
     <div class="col float-right">
-      <a href="#" class="btn btn-md btn-primary">Impersonate</a>
+      <%= link_to 'Impersonate', impersonate_path(membership.user), method: :post, class: "btn btn-md btn-primary" %>
       <% unless membership.org_admin? %>
         <%= link_to 'Kick user', destroy_membership_organization_path(@organization, membership), method: :delete, remote: true, class: 'btn btn-md btn-danger' %>
       <% end %>
