--- a/app/views/certificates/show.html.erb
+++ b/app/views/certificates/show.html.erb
@@ -9,14 +9,19 @@
           <h1>Certificate: <%= @certificate.course.name %> </h1>
           <div class="container-fluid">
             <div class="row">
-              <div class="col">
-                <div id="certificate-display" class="panel-stub"></div>
-                <p><strong>Earned at:</strong><%= @certificate.completion_record.date %></p>
-                <p><strong>Score:</strong><%= @certificate.completion_record.score %>%</p>
+              <div class="col-md-8">
+                <style></style>
+                <div class='embed-container'>
+                  <iframe src="/uploads/certificates/<%= @certificate.filename %>"></iframe>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <p><strong>Earned at:</strong> <%= @certificate.completion_record.date.strftime("%B %d, %Y") %></p>
+                <p><strong>Score:</strong> <%= @certificate.completion_record.score %>%</p>
               </div>
             </div>
-            <div class="row">
-              <%= link_to "Back", :back, class: 'btn btn-md btn-primary' %>
+            <div class="row mt-2">
+              <%= link_to "Back", certificates_path, class: 'btn btn-md btn-primary' %>
             </div>
           </div>
         </div>
