--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -10,4 +10,6 @@
       <% end %>
     </div>
   </div>
+  <br>
+  <%= link_to 'Back', course_path(@course), class: 'btn btn-info btn-md' %>
 </div>
