--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,6 +20,9 @@
       <%= link_to 'Publish', publish_course_path(@course), method: :patch, class: 'btn btn-md btn-primary course_publish' if !@course.published? && !@course.pages.empty? %>
       <%= link_to 'To pages', pages_course_path(@course), class: 'btn btn-info btn-md' %>
     <% end %>
+    <% if current_user.admin? %>
+      <%= link_to 'Check answers', check_course_path(@course), class: 'btn btn-primary' %>
+    <% end %>
   <% end %>
 <% end %>
 <%= link_to 'Back', courses_path, class: 'btn btn-info btn-md' %>
