--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,33 @@
-<% if !user_signed_in? %>
-  <%= render 'application/general-header' %>
-<% else %>
-  <%= render 'application/user-header' %>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <%= link_to root_path, class: 'navbar-brand' do %>
+  <%= image_tag 'elearning.png', width: '30', height: '30', class: 'd-inline-block align-top' %>
+  <div class="navbar-brand">
+    eLearning
+  </div>
 <% end %>
+<div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <%= link_to 'Courses', courses_path, class: 'nav-link'%>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Organizations', organizations_path, class: 'nav-link' %>
+    </li>
+  </ul>
+</div>
+<form class="form-inline md-form form-sm active-purple-2 mt-2">
+  <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
+  <i class="fas fa-search" aria-hidden="true"></i>
+</form>
+<% if user_signed_in? %>
+  <div class="form">
+    <p class="nav navbar-text"><%= current_user.admin? ? current_user.email + '(Admin)' : current_user.email %></p>
+    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger' %>
+  </div>
+<% else %>
+  <div class="form-actions">
+    <%= link_to 'Sign in', new_user_session_path, class: 'btn btn-outline-success' %>
+    <%= link_to 'Sign up', new_user_registration_path, class: 'btn btn-outline-danger' %>
+  </div>
+<% end %>
+</nav>
