--- a/app/views/courses/_rating.html.erb
+++ b/app/views/courses/_rating.html.erb
@@ -28,3 +28,13 @@
     </div>
   </div>
 </div>
+
+<script>
+var slider = new Slider('#rating');
+slider.on('slide', function(sliderValue) {
+  document.getElementById('rating-val').textContent = sliderValue;
+});
+slider.on('change', function(sliderValue) {
+  document.getElementById('rating-val').textContent = sliderValue.newValue;
+});
+</script>
