--- a/app/views/courses/rate.js.erb
+++ b/app/views/courses/rate.js.erb
@@ -1,2 +1,8 @@
-$('#average-rating').text('Rating: ' + <%= @course.rating %>);
 force_flash('<%= j render "layouts/flash" %>');
+$.ajax({
+  url: '<%= "/courses/#{@course.id}/finish" %>',
+  type: 'POST',
+  data: {
+    id: '<%= @course.id %>'
+  }
+});
