--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -13,6 +13,9 @@
     <li class="nav-item">
       <%= link_to 'Organizations', organizations_path, class: 'nav-link' %>
     </li>
+    <li class="nav-item">
+      <%= link_to 'Search', search_path, class: 'nav-link' %>
+    </li>
   </ul>
 </div>
 <form class="form-inline input-group" style="max-width: 300px">
